# markov

./: CMakeLists.txt  README.md  index.html  main.cpp  main_silicon.cpp  markov.cpp  markov.h  utils.cpp  utils.h
rudoc/: .~lock.docs.odt#  docs.odt
src/: Result.hpp  lib_entry_point.cpp  lib_entry_point.h  main_app.cpp  main_silicon.cpp  markov.cpp  markov.h  types.hpp  utils.cpp  utils.h
